--- a/projects/angular/package.json
+++ b/projects/angular/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@ngsuite/angular",
   "version": "0.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Cyberpull/ngsuite.git"
+  },
+  "homepage": "https://www.cyberpull.com/wiki/opensource/ngsuite",
   "peerDependencies": {
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0"
