--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "url": "https://github.com/Cyberpull/ngsuite.git"
   },
   "homepage": "https://www.cyberpull.com/wiki/opensource/ngsuite",
-  "keywords": ["angular", "ngsuite", "angular sdk", "sdk", "angular directives", "angular components"],
+  "keywords": [
+    "angular",
+    "ngsuite",
+    "angular sdk",
+    "sdk",
+    "angular directives",
+    "angular components"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -30,7 +37,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.5",
-    "@angular/cli": "~15.0.4",
+    "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
