--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       LIB_VERSION: ${{ github.ref_name }}
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
     - uses: actions/checkout@v3
@@ -29,7 +29,7 @@ jobs:
       run: npm ci
 
     - name: Build Package
-      run: npm run build -- ngsuite
+      run: npm run build:ngsuite
 
     - name: Publish Package
       run: bash .deploy/publish.sh
