--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ngsuite": "ng build ngsuite",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
