--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm ci
 
     - name: Build Package
-      run: npm run build:ngsuite
+      run: npm run build -- ngsuite
 
     - name: Publish Package
       run: bash .deploy/publish.sh
