--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Cyberpull/ngsuite.git"
+    "url": "git+https://github.com/Cyberpull/ngsuite.git"
   },
   "homepage": "https://www.cyberpull.com/wiki/opensource/ngsuite",
   "keywords": [
@@ -18,7 +18,6 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:ngsuite": "ng build ngsuite",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
