--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
+    - name: Install Yarn
+      run: npm install -g yarn
+
     - name: Install Dependencies
-      run: npm ci
+      run: yarn install
 
     - name: Build Packages
       run: bash .deploy/build.sh
